--- a/index.html
+++ b/index.html
@@ -111,10 +111,9 @@
 
       <section id="final-screen" class="scene">
         <div class="panel final-panel">
-          <h2>Juntos, a traves de cualquier dimension</h2>
+          <p class="final-message">Feliz San Valentín, mi solecito, el amor de mi vida, mi alma gemela 💗. Te amo en 1D . 2D _ 3D ƪ(˘⌣˘)ʃ 4D y muchos más D</p>
           <p class="big">S & M</p>
           <p class="infinity">&infin;</p>
-          <p class="love">Te amo</p>
           <button id="replay-btn">Volver a jugar</button>
         </div>
       </section>
